# ClassFlow-titulacion

./: .env  .gitignore  ClassFlow.spec  README.md  pruebas  pyproject.toml  text
src/: main.py
src/controllers/: ApartadosController.py  AsistenciaController.py  ClasesController.py  ExportarController.py  ParticipantesController.py  UserController.py
src/database/: Bd Classflow.sql  Classflow.sql  classflow.sql
src/models/: ApartadosModel.py  AsistenciaModel.py  ClasesModel.py  ExportarModel.py  ParticipantesModel.py  UserModel.py  databaseModel.py  shemasModel.py
src/views/: ActividadView.py  ActividadesView.py  AsistenciaView.py  ClasesView.py  DetallesView.py  EvaluacionView.py  LoginView.py  OlvidadoView.py  ParticipantesView.py  PerfilView.py  RegistroView.py  UnidadesView.py
