[project]
name = "classflow-titulacion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "flet>=0.84.0",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.50.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.3.1",
    "mysql-connector-python>=9.7.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[project.scripts]

#aqui definimos el comando corto
#quitamos el src porque definimos "src" como la raiz

app="main:main"

[tool.uv]
package = true

#Esta secion es crucial para que python vea el ontenido de src como el nivel raiz 
[tool.setuptools.package-dir]
"" = "src"
